lib_LTLIBRARIES = libt2PSkel.la

libt2PSkel_la_SOURCES = \
	t2PSkel.c # \
	#../../../utils/t2buf.c  # if you uncomment this line, do not
	                         # forget to append a backslash above!

#libt2PSkel_la_CFLAGS = \
#	-I../../tcpFlags/src     # tell the compiler where to find header
#							 # files from dependent plugins
